# aero-data-fe

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  cloud.yml  fix.py  pyproject.toml  requirements.txt  rxconfig.py
.github/workflows/: main.yml
aero_data/: __init__.py  aero_data.py  models.py  state.py
aero_data/components/: __init__.py  container.py  footer.py  header.py  switch.py  upload.py
aero_data/pages/: __init__.py  aip_to_opar.py  db.py  geojson_converter.py  geojson_generator.py  index.py  status.py  test.py
aero_data/src/: analytics.py  db.py  openaip.py  query_db.py  update_airports_in_cup.py  update_airports_in_db.py
aero_data/utils/: constants.py  file_handling.py  general.py  units.py
aero_data/utils/google_cloud/: __init__.py  storage.py
aero_data/utils/naviter/: __init__.py  constants.py  cup.py  helpers.py  openair.py  waypoint.py
aero_data/utils/naviter/tests/: test_cup.py  test_helpers.py  test_waypoint.py
aero_data/utils/openaip/: __init__.py  constants.py  utils.py
assets/: sample.cup
scripts/: deploy.sh  normalize_cup_names.py
