[tool.poetry]
name = "aero-data"
version = "0.1.0"
description = ""
authors = ["lsalehar <lsalehar@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
supabase = "^2.10.0"
python-decouple = "^3.8"
shapely = "^2.0"
reflex = "^0.6"
cuid2 = "^2.0.1"
python-dotenv = "^1.0.1"
reverse-geocode = "^1.6.5"
charset-normalizer = "^3.4"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.13.0"
isort = "^5.13.2"
ipython = "^8.30.0"
autoflake = "^2.3.1"