[project]
name = "aero-data"
version = "0.2.4"
description = ""
authors = [{name="lsalehar", email="lsalehar@users.noreply.github.com"}]
requires-python = ">=3.12"

dependencies = [
    "supabase>=2.10.0",
    "python-decouple>=3.8",
    "shapely>=2.0",
    "reflex>=0.7",
    "cuid2>=2.0.1",
    "python-dotenv>=1.0.1",
    "reverse-geocode>=1.6.5",
    "charset-normalizer>=3.4",
    "toml>=0.10.2",
    "more-itertools>=10.7.0",
    "granian>=2.3.1"
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
    "mypy>=1.12.0",
    "ipython>=8.30.0",
    "jupyter>=1.1.1",
    "geopy>=2.4.1",
    "pre-commit>=4.3.0",
]

[tool.ruff]
line-length = 96
indent-width = 4
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
